--- a/style.css
+++ b/style.css
@@ -17,12 +17,15 @@ body {
 }
 
 #calc-screen {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  font-size: 100px;
   padding: 10px;
   margin: 10px;
   margin-top: 30px;
   background-color: lightgray;
   width: 30rem;
-  height: 10em;
 }
 
 #calc-btn-grid {
